Creación de maqueta

--- a/index.html
+++ b/index.html
@@ -3,10 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RetroBits & Pixels</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header><h1>RetroBits & Pixels</h1></header>
+    <aside>
+        <menu>
+            <h2>Categorías</h2>
+            <li>Juegos Originales (Cartuchos)</li>
+            <li>Consolas y Accesorios</li>
+            <li>Super Nintendo (SNES)</li>
+            <li>Nintendo 64 (N64)</li>
+        </menu>
+    </aside>
+    <main>
+        <section class="producto1">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+            <button></button>
+        </section>
+        <section class="producto1">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+            <button></button>
+        </section>
+        <section class="producto1">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+            <button></button>
+        </section>
+        <section class="producto1">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+            <button></button>
+        </section>
+        <section class="producto1">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+            <button></button>
+        </section>
+        <section class="producto1">
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+            <button></button>
+        </section>
+    </main>
+    <footer> Todos los derechos reservados &copy; RetroBits & Pixels</footer>
 </body>
 </html>
