--- a/index.html
+++ b/index.html
@@ -18,41 +18,29 @@
         </menu>
     </aside>
     <main>
-        <section class="producto1">
-            <img src="" alt="">
-            <h3></h3>
+        <section class="producto">
+            <img src="./assets/img/supermetroid.webp" alt="Juego Super Metroid">
+            <h3>Super Metroid (SNES)</h3>
             <p></p>
-            <button></button>
+            <button><p>Comprar</p></button>
         </section>
-        <section class="producto1">
-            <img src="" alt="">
-            <h3></h3>
+        <section class="producto">
+            <img src="./assets/img/chronotrigger.webp" alt="Juego Chrono Trigger">
+            <h3>Chrono Trigger (SNES)</h3>
             <p></p>
-            <button></button>
+            <button><p>Comprar</p></button>
         </section>
-        <section class="producto1">
-            <img src="" alt="">
-            <h3></h3>
+        <section class="producto">
+            <img src="./assets/img/mariokart.webp" alt="Juego Mario Kart 64">
+            <h3>Mario Kart 64</h3>
             <p></p>
-            <button></button>
+            <button><p>Comprar</p></button>
         </section>
-        <section class="producto1">
-            <img src="" alt="">
-            <h3></h3>
+        <section class="producto">
+            <img src="./assets/img/thelegendofzelda.webp" alt="Juego The Legend of Zelda">
+            <h3>The Legend of Zelda: Ocarina of Time</h3>
             <p></p>
-            <button></button>
-        </section>
-        <section class="producto1">
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-            <button></button>
-        </section>
-        <section class="producto1">
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
-            <button></button>
+            <button><p>Comprar</p></button>
         </section>
     </main>
     <footer> Todos los derechos reservados &copy; RetroBits & Pixels</footer>
