Retoques finales y favicon

--- a/index.html
+++ b/index.html
@@ -5,44 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RetroBits & Pixels</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" href="./assets/favicon/consola-de-juego.ico">
 </head>
 <body>
     <header><h1>RetroBits & Pixels</h1></header>
     <aside>
+        
         <menu>
             <h2>Categorías</h2>
-            <li>Juegos Originales (Cartuchos)</li>
-            <li>Consolas y Accesorios</li>
-            <li>Super Nintendo (SNES)</li>
-            <li>Nintendo 64 (N64)</li>
+            <li><strong>Juegos Originales </strong>(4)</li>
+            <li>Consolas y Accesorios (10)</li>
+            <li>Super Nintendo (SNES) (7)</li>
+            <li>Nintendo 64 (N64) (9)</li>
         </menu>
     </aside>
     <main>
         <section class="producto">
             <img src="./assets/img/supermetroid.webp" alt="Juego Super Metroid">
             <h3>Super Metroid (SNES)</h3>
-            <p></p>
+            <p>Samus Aran en una misión de exploración y combate en un mundo alienígena oscuro.</p>
+            <p class="precio">$50.000CLP</p>
             <button><p>Comprar</p></button>
         </section>
         <section class="producto">
             <img src="./assets/img/chronotrigger.webp" alt="Juego Chrono Trigger">
             <h3>Chrono Trigger (SNES)</h3>
-            <p></p>
+            <p>Un RPG legendario con viajes en el tiempo, múltiples finales y un sistema de combate innovador.</p>
+            <p class="precio">$70.000CLP</p>
             <button><p>Comprar</p></button>
         </section>
         <section class="producto">
             <img src="./assets/img/mariokart.webp" alt="Juego Mario Kart 64">
-            <h3>Mario Kart 64</h3>
-            <p></p>
+            <h3>Mario Kart 64 (N64)</h3>
+            <p>Carreras multijugador llenas de acción, objetos clásicos de Mario y diversión.</p>
+            <p class="precio">$50.000CLP</p>
             <button><p>Comprar</p></button>
         </section>
         <section class="producto">
             <img src="./assets/img/thelegendofzelda.webp" alt="Juego The Legend of Zelda">
-            <h3>The Legend of Zelda: Ocarina of Time</h3>
-            <p></p>
+            <h3>The Legend of Zelda (N64)</h3>
+            <p>Aventura épica en 3D donde Link debe viajar en el tiempo para salvar Hyrule.</p>
+            <div class="precio"></div>
+            <p>$55.000CLP</p>
             <button><p>Comprar</p></button>
         </section>
     </main>
-    <footer> Todos los derechos reservados &copy; RetroBits & Pixels</footer>
+    <footer>&copy; 2025. RetroBits & Pixels. Todos los derechos reservados  </footer>
 </body>
 </html>
