--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
             <button><p>Comprar</p></button>
         </section>
     </main>
-    <footer>&copy; 2025. RetroBits & Pixels. Todos los derechos reservados  </footer>
+    <footer> <p>&copy; 2025. RetroBits & Pixels. Todos los derechos reservados</p>  </footer>
 </body>
 </html>
