Arreglo de letra menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="./assets/favicon/consola-de-juego.ico">
 </head>
+
 <body>
-    <header><h1>RetroBits & Pixels</h1></header>
+    <header>
+        <h1>RetroBits & Pixels</h1>
+    </header>
     <aside>
-        
+
         <menu>
             <h2>Categorías</h2>
             <li><strong>Juegos Originales </strong>(4)</li>
@@ -25,21 +29,27 @@
             <h3>Super Metroid (SNES)</h3>
             <p>Samus Aran en una misión de exploración y combate en un mundo alienígena oscuro.</p>
             <p class="precio">$50.000CLP</p>
-            <button><p>Comprar</p></button>
+            <button>
+                <p>Comprar</p>
+            </button>
         </section>
         <section class="producto">
             <img src="./assets/img/chronotrigger.webp" alt="Juego Chrono Trigger">
             <h3>Chrono Trigger (SNES)</h3>
             <p>Un RPG legendario con viajes en el tiempo, múltiples finales y un sistema de combate innovador.</p>
             <p class="precio">$70.000CLP</p>
-            <button><p>Comprar</p></button>
+            <button>
+                <p>Comprar</p>
+            </button>
         </section>
         <section class="producto">
             <img src="./assets/img/mariokart.webp" alt="Juego Mario Kart 64">
             <h3>Mario Kart 64 (N64)</h3>
             <p>Carreras multijugador llenas de acción, objetos clásicos de Mario y diversión.</p>
             <p class="precio">$50.000CLP</p>
-            <button><p>Comprar</p></button>
+            <button>
+                <p>Comprar</p>
+            </button>
         </section>
         <section class="producto">
             <img src="./assets/img/thelegendofzelda.webp" alt="Juego The Legend of Zelda">
@@ -47,9 +57,14 @@
             <p>Aventura épica en 3D donde Link debe viajar en el tiempo para salvar Hyrule.</p>
             <div class="precio"></div>
             <p>$55.000CLP</p>
-            <button><p>Comprar</p></button>
+            <button>
+                <p>Comprar</p>
+            </button>
         </section>
     </main>
-    <footer> <p>&copy; 2025. RetroBits & Pixels. Todos los derechos reservados</p>  </footer>
+    <footer>
+        <p>&copy; 2025. RetroBits & Pixels. Todos los derechos reservados</p>
+    </footer>
 </body>
+
 </html>
